QtBeef/src/Qt/qabstractspinbox.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QAbstractSpinBox
// --------------------------------------------------------------
[CRepr]
struct QAbstractSpinBox_Ptr: void
{
}
extension CQt
{
	[LinkName("QAbstractSpinBox_new")]
	public static extern QAbstractSpinBox_Ptr* QAbstractSpinBox_new(QWidget_Ptr* parent);
	[LinkName("QAbstractSpinBox_new2")]
	public static extern QAbstractSpinBox_Ptr* QAbstractSpinBox_new2();
	[LinkName("QAbstractSpinBox_Delete")]
	public static extern void QAbstractSpinBox_Delete(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_MetaObject")]
	public static extern QMetaObject_Ptr* QAbstractSpinBox_MetaObject(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_Qt_Metacast")]
	public static extern void* QAbstractSpinBox_Qt_Metacast(QAbstractSpinBox_Ptr* self, c_char* param1);
	[LinkName("QAbstractSpinBox_Qt_Metacall")]
	public static extern c_int QAbstractSpinBox_Qt_Metacall(QAbstractSpinBox_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QAbstractSpinBox_Tr")]
	public static extern libqt_string QAbstractSpinBox_Tr(c_char* s);
	[LinkName("QAbstractSpinBox_ButtonSymbols")]
	public static extern QAbstractSpinBox_ButtonSymbols QAbstractSpinBox_ButtonSymbols(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_SetButtonSymbols")]
	public static extern void QAbstractSpinBox_SetButtonSymbols(QAbstractSpinBox_Ptr* self, QAbstractSpinBox_ButtonSymbols bs);
	[LinkName("QAbstractSpinBox_SetCorrectionMode")]
	public static extern void QAbstractSpinBox_SetCorrectionMode(QAbstractSpinBox_Ptr* self, QAbstractSpinBox_CorrectionMode cm);
	[LinkName("QAbstractSpinBox_CorrectionMode")]
	public static extern QAbstractSpinBox_CorrectionMode QAbstractSpinBox_CorrectionMode(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_HasAcceptableInput")]
	public static extern bool QAbstractSpinBox_HasAcceptableInput(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_Text")]
	public static extern libqt_string QAbstractSpinBox_Text(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_SpecialValueText")]
	public static extern libqt_string QAbstractSpinBox_SpecialValueText(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_SetSpecialValueText")]
	public static extern void QAbstractSpinBox_SetSpecialValueText(QAbstractSpinBox_Ptr* self, libqt_string* txt);
	[LinkName("QAbstractSpinBox_Wrapping")]
	public static extern bool QAbstractSpinBox_Wrapping(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_SetWrapping")]
	public static extern void QAbstractSpinBox_SetWrapping(QAbstractSpinBox_Ptr* self, bool w);
	[LinkName("QAbstractSpinBox_SetReadOnly")]
	public static extern void QAbstractSpinBox_SetReadOnly(QAbstractSpinBox_Ptr* self, bool r);
	[LinkName("QAbstractSpinBox_IsReadOnly")]
	public static extern bool QAbstractSpinBox_IsReadOnly(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_SetKeyboardTracking")]
	public static extern void QAbstractSpinBox_SetKeyboardTracking(QAbstractSpinBox_Ptr* self, bool kt);
	[LinkName("QAbstractSpinBox_KeyboardTracking")]
	public static extern bool QAbstractSpinBox_KeyboardTracking(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_SetAlignment")]
	public static extern void QAbstractSpinBox_SetAlignment(QAbstractSpinBox_Ptr* self, void* flag);
	[LinkName("QAbstractSpinBox_Alignment")]
	public static extern void* QAbstractSpinBox_Alignment(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_SetFrame")]
	public static extern void QAbstractSpinBox_SetFrame(QAbstractSpinBox_Ptr* self, bool frame);
	[LinkName("QAbstractSpinBox_HasFrame")]
	public static extern bool QAbstractSpinBox_HasFrame(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_SetAccelerated")]
	public static extern void QAbstractSpinBox_SetAccelerated(QAbstractSpinBox_Ptr* self, bool on);
	[LinkName("QAbstractSpinBox_IsAccelerated")]
	public static extern bool QAbstractSpinBox_IsAccelerated(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_SetGroupSeparatorShown")]
	public static extern void QAbstractSpinBox_SetGroupSeparatorShown(QAbstractSpinBox_Ptr* self, bool shown);
	[LinkName("QAbstractSpinBox_IsGroupSeparatorShown")]
	public static extern bool QAbstractSpinBox_IsGroupSeparatorShown(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_SizeHint")]
	public static extern QSize_Ptr QAbstractSpinBox_SizeHint(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_MinimumSizeHint")]
	public static extern QSize_Ptr QAbstractSpinBox_MinimumSizeHint(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_InterpretText")]
	public static extern void QAbstractSpinBox_InterpretText(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_Event")]
	public static extern bool QAbstractSpinBox_Event(QAbstractSpinBox_Ptr* self, QEvent_Ptr* event);
	[LinkName("QAbstractSpinBox_InputMethodQuery")]
	public static extern QVariant_Ptr QAbstractSpinBox_InputMethodQuery(QAbstractSpinBox_Ptr* self, Qt_InputMethodQuery param1);
	[LinkName("QAbstractSpinBox_Validate")]
	public static extern QValidator_State QAbstractSpinBox_Validate(QAbstractSpinBox_Ptr* self, libqt_string* input, c_int* pos);
	[LinkName("QAbstractSpinBox_Fixup")]
	public static extern void QAbstractSpinBox_Fixup(QAbstractSpinBox_Ptr* self, libqt_string* input);
	[LinkName("QAbstractSpinBox_StepBy")]
	public static extern void QAbstractSpinBox_StepBy(QAbstractSpinBox_Ptr* self, c_int steps);
	[LinkName("QAbstractSpinBox_StepUp")]
	public static extern void QAbstractSpinBox_StepUp(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_StepDown")]
	public static extern void QAbstractSpinBox_StepDown(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_SelectAll")]
	public static extern void QAbstractSpinBox_SelectAll(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_Clear")]
	public static extern void QAbstractSpinBox_Clear(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_ResizeEvent")]
	public static extern void QAbstractSpinBox_ResizeEvent(QAbstractSpinBox_Ptr* self, QResizeEvent_Ptr* event);
	[LinkName("QAbstractSpinBox_KeyPressEvent")]
	public static extern void QAbstractSpinBox_KeyPressEvent(QAbstractSpinBox_Ptr* self, QKeyEvent_Ptr* event);
	[LinkName("QAbstractSpinBox_KeyReleaseEvent")]
	public static extern void QAbstractSpinBox_KeyReleaseEvent(QAbstractSpinBox_Ptr* self, QKeyEvent_Ptr* event);
	[LinkName("QAbstractSpinBox_WheelEvent")]
	public static extern void QAbstractSpinBox_WheelEvent(QAbstractSpinBox_Ptr* self, QWheelEvent_Ptr* event);
	[LinkName("QAbstractSpinBox_FocusInEvent")]
	public static extern void QAbstractSpinBox_FocusInEvent(QAbstractSpinBox_Ptr* self, QFocusEvent_Ptr* event);
	[LinkName("QAbstractSpinBox_FocusOutEvent")]
	public static extern void QAbstractSpinBox_FocusOutEvent(QAbstractSpinBox_Ptr* self, QFocusEvent_Ptr* event);
	[LinkName("QAbstractSpinBox_ContextMenuEvent")]
	public static extern void QAbstractSpinBox_ContextMenuEvent(QAbstractSpinBox_Ptr* self, QContextMenuEvent_Ptr* event);
	[LinkName("QAbstractSpinBox_ChangeEvent")]
	public static extern void QAbstractSpinBox_ChangeEvent(QAbstractSpinBox_Ptr* self, QEvent_Ptr* event);
	[LinkName("QAbstractSpinBox_CloseEvent")]
	public static extern void QAbstractSpinBox_CloseEvent(QAbstractSpinBox_Ptr* self, QCloseEvent_Ptr* event);
	[LinkName("QAbstractSpinBox_HideEvent")]
	public static extern void QAbstractSpinBox_HideEvent(QAbstractSpinBox_Ptr* self, QHideEvent_Ptr* event);
	[LinkName("QAbstractSpinBox_MousePressEvent")]
	public static extern void QAbstractSpinBox_MousePressEvent(QAbstractSpinBox_Ptr* self, QMouseEvent_Ptr* event);
	[LinkName("QAbstractSpinBox_MouseReleaseEvent")]
	public static extern void QAbstractSpinBox_MouseReleaseEvent(QAbstractSpinBox_Ptr* self, QMouseEvent_Ptr* event);
	[LinkName("QAbstractSpinBox_MouseMoveEvent")]
	public static extern void QAbstractSpinBox_MouseMoveEvent(QAbstractSpinBox_Ptr* self, QMouseEvent_Ptr* event);
	[LinkName("QAbstractSpinBox_TimerEvent")]
	public static extern void QAbstractSpinBox_TimerEvent(QAbstractSpinBox_Ptr* self, QTimerEvent_Ptr* event);
	[LinkName("QAbstractSpinBox_PaintEvent")]
	public static extern void QAbstractSpinBox_PaintEvent(QAbstractSpinBox_Ptr* self, QPaintEvent_Ptr* event);
	[LinkName("QAbstractSpinBox_ShowEvent")]
	public static extern void QAbstractSpinBox_ShowEvent(QAbstractSpinBox_Ptr* self, QShowEvent_Ptr* event);
	[LinkName("QAbstractSpinBox_InitStyleOption")]
	public static extern void QAbstractSpinBox_InitStyleOption(QAbstractSpinBox_Ptr* self, QStyleOptionSpinBox_Ptr* option);
	[LinkName("QAbstractSpinBox_LineEdit")]
	public static extern QLineEdit_Ptr* QAbstractSpinBox_LineEdit(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_SetLineEdit")]
	public static extern void QAbstractSpinBox_SetLineEdit(QAbstractSpinBox_Ptr* self, QLineEdit_Ptr* edit);
	[LinkName("QAbstractSpinBox_StepEnabled")]
	public static extern void* QAbstractSpinBox_StepEnabled(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_EditingFinished")]
	public static extern void QAbstractSpinBox_EditingFinished(QAbstractSpinBox_Ptr* self);
	[LinkName("QAbstractSpinBox_Tr2")]
	public static extern libqt_string QAbstractSpinBox_Tr2(c_char* s, c_char* c);
	[LinkName("QAbstractSpinBox_Tr3")]
	public static extern libqt_string QAbstractSpinBox_Tr3(c_char* s, c_char* c, c_int n);
}
